--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,6 @@ main {
     }
 }
 
-
 h1,
 h2,
 h3,
@@ -111,21 +110,15 @@ a {
     color: var(--blogtube_primary_color);
 }
 
-img:hover {
-    filter: brightness(0.8);
-}
-
 .home main .blogtube_content_spacer {
     max-width: unset;
     width: unset;
-    align-items: unset;
 }
 
 .blogtube_content_spacer {
     max-width: 100em;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
 }
 
@@ -141,10 +134,6 @@ img:hover {
     padding: 0 clamp(0.5rem, 2vw, 1rem);
     overflow: hidden;
     font-size: 1.4rem;
-    flex-grow: 1;
-    // width: 100%;
-
-    background-color: var(--blogtube_background_color_posts);
 
     .wp-block-columns {
         margin: 1em 0 0 0;
@@ -198,6 +187,10 @@ iframe {
 
 img {
     max-width: 100%;
+
+    &:hover {
+        filter: brightness(0.8);
+    }
 }
 
 select {
@@ -435,13 +428,6 @@ select {
         border-radius: 2em;
         border: none;
     }
-}
-
-.blogtube_hero {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    grid-area: landingpagesection;
 }
 
 .post-password-form {
