--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -83,7 +83,7 @@
 
                         a {
                             text-decoration: none;
-                            color: #3ea6ff;
+                            color: var(--blogtube_primary_color);
                         }
                     }
                 }
