customizer: post settings

--- a/style.css
+++ b/style.css
@@ -698,12 +698,15 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 }
 .single main {
   margin-top: 0;
-  max-width: 90em;
+  max-width: var(--blogtube_maximum_width_of_posts);
 }
 @media only screen and (min-width: 1000px) {
   .single main {
     min-width: unset;
   }
+}
+.single main .blogtube_content_spacer {
+  max-width: var(--blogtube_maximum_width_of_posts);
 }
 .single .blogtube_hero {
   width: 100%;
@@ -770,6 +773,10 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   text-decoration: none;
   color: var(--blogtube_primary_color);
 }
+.single .blogtube_user_content_container {
+  background-color: var(--blogtube_background_color_posts);
+  border-radius: 12px;
+}
 .single .blogtube_post_footer {
   width: 100%;
 }
@@ -783,6 +790,26 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   gap: 0.5em;
   list-style: none;
   flex-wrap: wrap;
+}
+.single .blogtube_post_tags ul li {
+  height: 32px;
+  min-width: 12px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  display: flex;
+  align-items: stretch;
+  transition: background-color 0.5s cubic-bezier(0.05, 0, 0, 1);
+}
+.single .blogtube_post_tags ul li a {
+  color: var(--blogtube_font_color);
+  text-decoration: none;
+  padding: 0 12px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+.single .blogtube_post_tags ul li:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .single .blogtube_authorbox {
   display: flex;
@@ -811,7 +838,7 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   max-height: 150px;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 16px;
+  border-radius: 12px;
 }
 .single .blogtube_authorbox .blogtube_author_details {
   flex: 100 0 60%;
