--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -6,10 +6,14 @@
 
     main {
         margin-top: 0;
-        max-width: 90em;
+        max-width: var(--blogtube_maximum_width_of_posts);
 
         @media only screen and (min-width: 1000px) {
             min-width: unset;
+        }
+
+        .blogtube_content_spacer {
+            max-width: var(--blogtube_maximum_width_of_posts);
         }
     }
 
@@ -91,6 +95,11 @@
         }
     }
 
+    .blogtube_user_content_container {
+        background-color: var(--blogtube_background_color_posts);
+        border-radius: 12px;
+    }
+
     .blogtube_post_footer {
         width: 100%;
     }
@@ -105,6 +114,29 @@
             gap: 0.5em;
             list-style: none;
             flex-wrap: wrap;
+
+            li {
+                height: 32px;
+                min-width: 12px;
+                border-radius: 8px;
+                background-color: #ffffff1a;
+                display: flex;
+                align-items: stretch;
+                transition: background-color .5s cubic-bezier(.05,0,0,1);
+                
+                a {
+                    color: var(--blogtube_font_color);
+                    text-decoration: none;
+                    padding: 0 12px;
+                    font-weight: 500;
+                    display: flex;
+                    align-items: center;
+                }
+
+                &:hover {
+                    background-color: #ffffff33;
+                }
+            }
         }
     }
 
@@ -134,7 +166,7 @@
                     height: 100%;
                     max-height: 150px;
                     object-fit: cover;
-                    border-radius: 16px;
+                    border-radius: 12px;
                 }
             }
         }
