customizer: page settings

--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -7,12 +7,15 @@
     main {
         margin-top: 0;
         padding-left: clamp(0em, 2vw, 1.2em);
-        max-width: 100em;
-
-        max-width: 90em;
+        max-width: var(--blogtube_maximum_width_of_pages);
 
         @media only screen and (min-width: 1000px) {
             min-width: unset;
+        }
+
+        .blogtube_user_content_container {
+            border-radius: 12px;
+            background-color: var(--blogtube_background_color_pages);
         }
     }
 }
