wp-polls support, pagination color, widget background color

--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -49,7 +49,7 @@ $font-size: clamp(12px, 1.5vw, 16px);
 .page-numbers {
     border-radius: 4px;
     padding: 0.5em 0.8em;
-    background-color: black;
+    background-color: rgb(41, 41, 41);
     border: solid 1px gray;
     white-space: nowrap;
     user-select: none;
