--- a/style.scss
+++ b/style.scss
@@ -42,13 +42,14 @@ body {
 
 .blogtube_skip_link {
     position: absolute;
-    top: -50px;
+    top: -100px;
     left: 0;
-    background-color: var(--blogtube_background_color);
-    color: #fff;
+    background-color: var(--blogtube_primary_variant_darker);
+    color: var(--blogtube_font_color);
     padding: 1em;
     border: 1px solid var(--blogtube_primary_color);
     z-index: 999;
+    font-size: 1.6rem;
 }
 
 .blogtube_skip_link:focus {
@@ -232,7 +233,7 @@ hr {
     width: 70%;
 }
 
-input:not([type="submit"], [type="button"], [type="checkbox"]),
+input:not([type="submit"], [type="radio"], [type="button"], [type="checkbox"]),
 textarea,
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -249,7 +250,7 @@ textarea:-webkit-autofill:focus {
     outline: none;
 }
 
-input:not([type="submit"], [type="button"], [type="checkbox"]), textarea {
+input:not([type="submit"], [type="radio"], [type="button"], [type="checkbox"]), textarea {
     border-radius: 4px 4px 0 0;
     padding: 1em 0.5em;
 
