--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -98,6 +98,7 @@
     .blogtube_user_content_container {
         background-color: var(--blogtube_background_color_posts);
         border-radius: 12px;
+        line-height: 1.5em;
     }
 
     .blogtube_post_footer {
