--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -15,6 +15,7 @@
 
         .blogtube_user_content_container {
             border-radius: 12px;
+            line-height: 1.8em;
             background-color: var(--blogtube_background_color_pages);
         }
     }
