fix infinity scroll on archive, redesign table, cleanup

--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -2,4 +2,10 @@
     .blogtube_content_spacer {
         align-items: unset;
     }
+
+    .blogtube_no_post_found {
+        text-align: center;
+        margin-top: 5em;
+        font-size: 2rem;
+    }
 }
