--- a/style.css
+++ b/style.css
@@ -705,6 +705,11 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 .search .blogtube_content_spacer {
   align-items: unset;
 }
+.search .blogtube_no_post_found {
+  text-align: center;
+  margin-top: 5em;
+  font-size: 2rem;
+}
 
 .single {
   display: flex;
@@ -1019,44 +1024,57 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 }
 
 .wp-block-table table {
-  border-collapse: collapse;
   margin-top: 25px;
   font-size: clamp(0.8em, 2vw, 1em);
-  display: block;
-  overflow-x: auto;
-  color: rgb(151, 151, 151);
   width: auto;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+.wp-block-table tbody {
+  background-color: #1a1a1b;
 }
 .wp-block-table table thead tr {
   background-color: transparent;
   text-align: left;
 }
+.wp-block-table thead tr:first-of-type :first-child {
+  border-radius: 12px 0 0 0;
+}
+.wp-block-table thead tr:first-of-type :last-child {
+  border-radius: 0 12px 0 0;
+}
 .wp-block-table th,
 .wp-block-table td {
-  padding: 0.5em 0.5em;
+  padding: 0.8em 0.8em;
+  border: none;
   color: var(--blogtube_font_color);
-  border-color: #313131;
 }
-.wp-block-table thead {
-  border-bottom: 2px solid;
-}
-.wp-block-table tfoot {
-  border-top: 2px solid;
+.wp-block-table tfoot td {
+  border-top: 1px solid var(--blogtube_primary_color);
 }
 .wp-block-table th {
   background-color: #28282d;
+  border-bottom: 1px solid;
+  color: var(--blogtube_primary_color);
 }
 .wp-block-table tr {
-  transition: all 400ms;
+  transition: all 200ms;
+}
+.wp-block-table tr:hover {
+  background-color: rgb(54, 54, 58);
 }
 .wp-block-table.is-style-stripes {
   border-bottom: none;
 }
-.wp-block-table.is-style-stripes thead {
-  border-bottom: none;
+.wp-block-table.is-style-stripes th {
+  background-color: #28282d;
+  border-bottom: 1px solid;
 }
 .wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
-  background-color: rgb(24, 24, 24);
+  background-color: var(--blogtube_primary_variant_darker);
+}
+.wp-block-table.is-style-stripes tbody tr:nth-child(odd):hover {
+  background-color: rgb(54, 54, 58);
 }
 
 .wp-block-button a {
