--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,7 +11,7 @@
     left: 0;
     padding-right: 1em;
 
-    .blotube_name {
+    .blogtube_name {
         display: flex;
         align-items: center;
         text-decoration: none;
